hphp/test/slow/reified_generics/error-handler-6.php.expectf
ERROR: string(72) "Value returned from function f() must be of type C<int>, C<string> given"

Catchable fatal error: Value returned from function f() must be of type C<int>, C<string> given in %s on line 22
